dev
warning: virtual workspace defaulting to `resolver = "1"` despite one or more workspace members being on edition 2024 which implies `resolver = "3"`
note: to keep the current resolver, specify `workspace.resolver = "1"` in the workspace root's manifest
note: to use the edition 2024 resolver, specify `workspace.resolver = "3"` in the workspace root's manifest
note: for more details see https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
    Checking cratetorrent v0.2.0 (/home/cole/projects/forks/cratetorrent/cratetorrent)
warning: unused imports: `BitVec` and `Msb0`
   --> cratetorrent/src/lib.rs:147:23
    |
147 | use bitvec::prelude::{BitVec, Msb0};
    |                       ^^^^^^  ^^^^
    |
    = note: `#[warn(unused_imports)]` on by default

warning: unused imports: `IoSliceMut` and `IoSlice`
 --> cratetorrent/src/iovecs.rs:8:15
  |
8 | use std::io::{IoSlice, IoSliceMut};
  |               ^^^^^^^  ^^^^^^^^^^

error[E0308]: mismatched types
   --> cratetorrent/src/disk/io/torrent.rs:214:21
    |
213 |                 read_cache: sync::Mutex::new(LruCache::new(
    |                                              ------------- arguments to this function are incorrect
214 |                     READ_CACHE_UPPER_BOUND,
    |                     ^^^^^^^^^^^^^^^^^^^^^^ expected `NonZero<usize>`, found `usize`
    |
    = note: expected struct `std::num::NonZero<usize>`
                 found type `usize`
note: associated function defined here
   --> /home/cole/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/lru-0.14.0/src/lib.rs:222:12
    |
222 |     pub fn new(cap: NonZeroUsize) -> LruCache<K, V> {
    |            ^^^
help: consider calling `NonZero::new`
    |
214 |                     NonZero::new(READ_CACHE_UPPER_BOUND).unwrap(),
    |                     +++++++++++++                      ++++++++++

error[E0308]: mismatched types
   --> cratetorrent/src/peer/codec.rs:300:39
    |
300 |                 buf.extend_from_slice(bitfield.as_raw_slice());
    |                     ----------------- ^^^^^^^^^^^^^^^^^^^^^^^ expected `&[u8]`, found `&[usize]`
    |                     |
    |                     arguments to this method are incorrect
    |
    = note: expected reference `&[u8]`
               found reference `&[usize]`
note: method defined here
   --> /home/cole/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/bytes-1.10.1/src/bytes_mut.rs:863:12
    |
863 |     pub fn extend_from_slice(&mut self, extend: &[u8]) {
    |            ^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
   --> cratetorrent/src/peer/codec.rs:458:54
    |
457 |                 buf.copy_to_slice(&mut bitfield);
    |                                        -------- here the type of `bitfield` is inferred to be `Vec<u8>`
458 |                 Message::Bitfield(Bitfield::from_vec(bitfield))
    |                                   ------------------ ^^^^^^^^ expected `Vec<usize>`, found `Vec<u8>`
    |                                   |
    |                                   arguments to this function are incorrect
    |
    = note: expected struct `Vec<usize>`
               found struct `Vec<u8>`
note: associated function defined here
   --> /home/cole/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/bitvec-1.0.1/src/vec.rs:221:9
    |
221 |     pub fn from_vec(vec: Vec<T>) -> Self {
    |            ^^^^^^^^

error: lifetime may not live long enough
  --> cratetorrent/src/iovecs.rs:39:9
   |
31 | impl<'a> IoVec<&'a mut [u8]> {
   |      -- lifetime `'a` defined here
...
38 |     pub fn as_slice(&self) -> &'a [u8] {
   |                     - let's call the lifetime of this reference `'1`
39 |         self.inner
   |         ^^^^^^^^^^ method was supposed to return data with lifetime `'a` but it is returning data with lifetime `'1`

error: lifetime may not live long enough
  --> cratetorrent/src/iovecs.rs:44:9
   |
31 | impl<'a> IoVec<&'a mut [u8]> {
   |      -- lifetime `'a` defined here
...
43 |     pub fn as_mut_slice(&mut self) -> &'a mut [u8] {
   |                         - let's call the lifetime of this reference `'1`
44 |         self.inner
   |         ^^^^^^^^^^ method was supposed to return data with lifetime `'a` but it is returning data with lifetime `'1`

For more information about this error, try `rustc --explain E0308`.
warning: `cratetorrent` (lib) generated 2 warnings
error: could not compile `cratetorrent` (lib) due to 5 previous errors; 2 warnings emitted
